--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "author": "David Lane <me@dvdln.com>",
   "license": "MIT",
   "dependencies": {
-    "JSONPath": "^0.10.0"
+    "JSONPath": "s3u/JSONPath"
   },
   "devDependencies": {
     "bower": "^1.3.1"
